# Go-Gear-Quake-III-VR-Edition

./: build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/debug/: app-debug.apk
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/GUNNM_VR/Quake3eVR/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk  botlib.mk  rendv.mk
app/src/main/jni/Quake3eVR/: Android.mk
app/src/main/jni/VrApi/Include/: VrApi_Helpers.h  VrApi_Types.h  VrApi_Version.h
app/src/main/jni/VrApi/Projects/AndroidPrebuilt/jni/: Android.mk
app/src/main/res/values/: strings.xml
app/src/release/assets/: autoexec.cfg
gradle/wrapper/: gradle-wrapper.properties
